[metadata]
name = pyflasc
version = 0.1.2
description = Flare-Sensitive Clustering based on HDBSCAN*.
long_description = file: README.md
long_description_content_type = text/markdown
license = 3-Clause BSD
author = Jelmer Bot
author_email = jelmer.bot@uhasselt.be
url = https://github.com/vda-lab/pyflasc
download_urls = https://pypi.org/project/pyflasc/
project_urls =
	Code = https://github.com/vda-lab/pyflasc
	Issue tracker = https://github.com/vda-lab/pyflasc/issues
classifiers =
	Development Status :: 4 - Beta
	License :: OSI Approved :: BSD License
	Intended Audience :: Science/Research
	Topic :: Software Development
	Topic :: Scientific/Engineering
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Cython
	Programming Language :: Python :: 3 :: Only

[options]
packages = 
	flasc
	flasc.tests
python_requires = >=3.9
